--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
+    "serverless-http": "^3.2.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   }
